--- a/index.html
+++ b/index.html
@@ -2,33 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./style.css">
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https:/www.github.com/vadims3103" target="_blank">vadims3103</a>.
-  </footer>
+  <div class="wrapper">
+    <main>
+      <div class="card">
+        <figure class="avatar">
+          <img src="./assets/images/avatar-jessica.jpeg" alt="Photo of Jessica Randall">
+        </figure>
+        <address class="personal-information">
+          <h1 class="name text-preset-1">Jessica Randall</h1>
+          <p class="location text-preset-2-bold">London, United Kingdom</p>
+        </address>
+        <div class="facts information text-preset-2">
+          "Front-end developer and avid reader."
+        </div>
+        <ul>
+          <a href="#"><li class="text-preset-2-bold">GitHub</li></a>
+           <a href="#"><li class="text-preset-2-bold">Frontend Mentor</li></a>
+           <a href="#"><li class="text-preset-2-bold">LinkedIn</li></a>
+           <a href="#"><li class="text-preset-2-bold">Twitter</li></a>
+           <a href="#"><li class="text-preset-2-bold">Instagram</li></a>
+        </ul>
+      </div>
+    </main>
+    
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https:/www.github.com/vadims3103" target="_blank">vadims3103</a>.
+    </footer>
+  </div>
 </body>
 </html>
