added classes for ul block

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="facts information text-preset-2">
           "Front-end developer and avid reader."
         </div>
-        <ul>
-          <a href="#"><li class="text-preset-2-bold">GitHub</li></a>
-           <a href="#"><li class="text-preset-2-bold">Frontend Mentor</li></a>
-           <a href="#"><li class="text-preset-2-bold">LinkedIn</li></a>
-           <a href="#"><li class="text-preset-2-bold">Twitter</li></a>
-           <a href="#"><li class="text-preset-2-bold">Instagram</li></a>
+        <ul class="social-links">
+          <a href="#"><li class="social-link text-preset-2-bold">GitHub</li></a>
+          <a href="#"><li class="social-link text-preset-2-bold">Frontend Mentor</li></a>
+          <a href="#"><li class="social-link text-preset-2-bold">LinkedIn</li></a>
+          <a href="#"><li class="social-link text-preset-2-bold">Twitter</li></a>
+          <a href="#"><li class="social-link text-preset-2-bold">Instagram</li></a>
         </ul>
       </div>
     </main>
