corrected stucture in ul

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           "Front-end developer and avid reader."
         </div>
         <ul class="social-links">
-          <a href="#"><li class="social-link text-preset-2-bold">GitHub</li></a>
-          <a href="#"><li class="social-link text-preset-2-bold">Frontend Mentor</li></a>
-          <a href="#"><li class="social-link text-preset-2-bold">LinkedIn</li></a>
-          <a href="#"><li class="social-link text-preset-2-bold">Twitter</li></a>
-          <a href="#"><li class="social-link text-preset-2-bold">Instagram</li></a>
+          <li><a class="text-preset-2-bold" href="#">GitHub</a></li>
+          <li><a class="text-preset-2-bold" href="#">Frontend Mentor</a></li>
+          <li><a class="text-preset-2-bold" href="#">LinkedIn</a></li>
+          <li><a class="text-preset-2-bold" href="#">Twitter</a></li>
+          <li><a class="text-preset-2-bold" href="#">Instagram</a></li>
         </ul>
       </div>
     </main>
